--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -10,9 +10,23 @@ body {
     color: #2b3035;
 }
 
+.movies__item{
+    padding: 24px 20px;
+    justify-content: space-between;
+}
+.alternative_title{
+    color: #e8e6e3;
+}
+
+.card-img-top{
+    height: 108px;
+    width: 72px;
+}
+
+
+
 .movies {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     gap: 10px;
     padding: 20px 0;
 }
