--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -16,7 +16,10 @@
 .movie-tile:hover img {
     transform: scale(1.05);
 }
-
+.full-width {
+    width: 100vw;
+    margin-left: calc(-50vw + 50%);
+}
 .movie-type {
     position: absolute;
     top: 8px;
@@ -26,6 +29,46 @@
     font-size: 11px;
     border-radius: 6px;
     z-index: 2;
+}
+.one-movie__hero::after {
+    content: '';
+    position: absolute;
+    inset: 0;
+    box-shadow: inset 0 0 120px rgba(0,0,0,.6);
+    z-index: 1;
+}
+
+
+.one-movie__hero {
+    position: relative;
+    height: 90%;
+    border-radius: 0 0 24px 24px;
+    overflow: hidden;
+
+}
+.one-movie__hero::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(
+        to right,
+        rgba(0,0,0,1) 0%,
+        rgba(13,17,23,0.98) 25%,
+        rgba(13,17,23,1.9) 50%,
+        rgba(13,17,23,0.7) 70%,
+        rgba(13,17,23,0.5) 85%
+    );
+
+    z-index: 1;
+}
+
+
+.one-movie__content {
+    z-index: 2;
+}
+
+.warn__badge {
+    font-size: 1rem;
 }
 
 .movie-hover {
