--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -8,12 +8,41 @@
     margin-left: calc(-50vw + 50%);
 }
 
+.carousel-inner {
+    height: 65vh;
+    max-height: 600px;
+}
+
+.carousel-item {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+}
+
 /* слайд */
 .hero-slide {
     position: relative;
     width: 100%;
     height: 100%;
     overflow: hidden;
+}
+
+.carousel-inner {
+    height: 65vh;
+    max-height: 600px;
+}
+
+.carousel-inner img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+[data-bs-theme=dark] .carousel .carousel-control-prev-icon,
+[data-bs-theme=dark] .carousel .carousel-control-next-icon {
+    filter: none; /* убираем серость */
+
 }
 
 /* фон */
@@ -94,6 +123,18 @@
     top: 8px;
     right: 8px;
     background: rgba(0,0,0,.8);
+    padding: 2px 8px;
+    font-size: 11px;
+    border-radius: 6px;
+    z-index: 2;
+}
+
+
+.movie-rating {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    background: rgba(25, 135, 84, .8);
     padding: 2px 8px;
     font-size: 11px;
     border-radius: 6px;
@@ -399,10 +440,7 @@ body {
     border: none;
     transition: 0.3s;
 }
-.movie-card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 10px rgb(0, 245, 129);
-}
+
 .profile-bio {
     font-style: italic;
     color: #bbb;
@@ -439,10 +477,7 @@ body {
     background: #161b22;
 }
 
-.movie-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
-}
+
 
 .movie-image img {
     object-fit: cover;
